# Chess-Puzzle-Text2SQL

./: .gitignore  Dockerfile  README.md  build.gradle.kts  build.sh  docker-compose-sample.yml  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  build.gradle.kts  build.sh  env-description
fastapi/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  main.py  pytest.ini  requirements.txt  start.sh
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  build.sh  bun.lockb  package.json  pnpm-lock.yaml  server.js  svelte.config.js  tailwind.config.ts  tsconfig.json
ktor/: .dockerignore  .env  .env-sample  Dockerfile  README.md  build.gradle.kts  prompt-templates.yaml
microservice/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
microservice/src/: config.py  models.py
microservice/tests/: test_config.py  test_main.py
misc/: benchmark-5Records.json  benchmark-Ablation1.json  benchmark-Ablation2.json  benchmark-Ablation3.json  benchmark-Ablation4.json  benchmark-result.json  benchmark-result1.json  benchmark-result3.json
my-skeleton-app/: package.json
ngnix/: Dockerfile  nginx.conf
pythonScripts/: benchmarkResultCounter.py  demonstrationSimilarityChecker.py  main.py
scripts/: benchmarkResultCounter.html  demonstrationSimilarityChecker.html  note.txt
sv-router/: .dockerignore  .gitignore  .prettierrc  Caddyfile  Dockerfile  bun.lockb  eslint.config.js  index.html  package.json  tsconfig.json  uno.config.ts  vite-env.d.ts  vite.config.ts
(+536 files in other folders)
