[project]
name = "microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "commentjson==0.9.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.8",
    "filelock==3.17.0",
    "fsspec==2025.2.0",
    "h11==0.14.0",
    "httpx>=0.28.1",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "lark-parser==0.7.8",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "packaging==24.2",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentence-transformers==3.2.1",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.48.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
]
